Ampersands removed from plot text

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -593,7 +593,7 @@ Regarding the combined Milgram/Waterworth model shows more clearly that the bala
 	\textit{``We may feel hardly present at all in the physical world (a state we call absence) if nothing is happening there that is of interest or that impacts on our well-being, and so it is with mediated presence.''}~\cite{Waterworth2014}
 \end{quote}
 
-Furthermore one can postulate as to the essence of Lifton's vacancy with regard to both the combined Milgram/Waterworth model (and thus to the experience of presence in general). Lifton's original definition presents vacancy as the `absence' of a person from one world while they are participating in the other, however the use of this term in Lifton's context differs to its use in the combined Milgram/Waterworth model. Lifton's absence refers to the inability to simultaneously perceive environmental stimuli from \textit{``more than one place (reality)''} while the absence of the combined Milgram/Waterworth model refers to increased conceptual/abstract reasoning resulting in a reduction of perceptual/concrete processing of environmental stimuli. Thus in terms of the combined Milgram/Waterworth model, the vacancy problem can be thought of as referring to the largely singular nature of a user's position upon the locus of attention axis and the ability of a parallel reality platform toward reducing the problem, by allowing a user to participate in two environments at once, can be visualised either as extending the occupiable position upon the locus of attention axis from a singular point to a range, or as reducing the deflection experience upon the focus of attention axis from presence toward absence when performing a transition between two positions upon the locus of attention axis.
+Furthermore one can postulate as to the essence of Lifton's vacancy with regard to the combined Milgram/Waterworth model (and thus to the experience of presence in general). Lifton's original definition presents vacancy as the `absence' of a person from one world while they are participating in the other, however the use of this term in Lifton's context differs to its use in the combined Milgram/Waterworth model. Lifton's absence refers to the inability to simultaneously perceive environmental stimuli from \textit{``more than one place (reality)''} while the absence of the combined Milgram/Waterworth model refers to increased conceptual/abstract reasoning resulting in a reduction of perceptual/concrete processing of environmental stimuli. In terms of the combined Milgram/Waterworth model, the vacancy problem should be thought of as referring to the largely singular nature of a user's position upon the locus of attention axis and the ability of a parallel reality platform toward reducing the problem, by allowing a user to participate in two environments at once, can be visualised either as extending the occupiable position upon the locus of attention axis from a singular position to a pair of positions (or as a range between two positions), or as reducing the deflection experienced upon the focus of attention axis from presence toward absence when performing a transition between two positions upon the locus of attention axis.
 
 %The Sensus Dimension - the importance of being awake in class
 %"Even as we sleep dreamlessly..." (example of being 'unconscious' in this regard)
