--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -213,7 +213,7 @@ When looking at either scenario's data (the VR section of the traditional VR sce
 \begin{figure}
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/1_pitch_yaw_2up.png}
-	\caption{Pitch and yaw against time for participant 1 in traditional and PR scenarios.}
+	\caption{Pitch and yaw against time for participant 1 in traditional VR and PR scenarios.}
 	\label{1_pitch_yaw_2up.png}
 	\end{center}
 \end{figure}
@@ -221,7 +221,7 @@ When looking at either scenario's data (the VR section of the traditional VR sce
 \begin{figure}
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/4_pitch_yaw_2up.png}
-	\caption{Pitch and yaw against time for participant 4 in traditional and PR scenarios.}
+	\caption{Pitch and yaw against time for participant 4 in traditional VR and PR scenarios.}
 	\label{4_pitch_yaw_2up.png}
 	\end{center}
 \end{figure}
@@ -229,7 +229,7 @@ When looking at either scenario's data (the VR section of the traditional VR sce
 \begin{figure}
 	\begin{center}
 	\includegraphics[width=\textwidth]{1/6_pitch_yaw_2up.png}
-	\caption{Pitch and yaw against time for participant 6 in traditional and PR scenarios.}
+	\caption{Pitch and yaw against time for participant 6 in traditional VR and PR scenarios.}
 	\label{6_pitch_yaw_2up.png}
 	\end{center}
 \end{figure}
