--- a/bib.bib
+++ b/bib.bib
@@ -64,15 +64,6 @@ url = {http://www.research.ibm.com/people/k/koved/papers/rc16446.html},
 volume = {1},
 year = {1992}
 }
-@article{Applin2012,
-abstract = {The technology industry has evolved over the years with a development lens increasingly focused on end users and usage cases. Indeed, for the past decade or more, personas (the designer-created profiles of end users) have become stand-ins for various usage cases and user models. With regard to location aware software and mobile applications, the usage of Dual Reality and Mixed Reality as metaphors have functioned in a similar vein. Just as personas are not people, Mixed and Dual Reality do not fully represent or address the complex usage cases developing as more people do more things, with more software at more times and in more spaces than ever before. This new complex application ecosystem presents greater opportunities and challenges for application design. We discuss ways that developers can use PolySocial Reality (PoSR) to represent a more complete complex structural model},
-author = {Applin, Sally A},
-journal = {Policy},
-number = {February},
-title = {{PolySocial Reality : Prospects for Extending User Capabilities Beyond Mixed , Dual and Blended Reality}},
-url = {http://www.dfki.de/LAMDa/2012/accepted/PolySocial\_Reality.pdf},
-year = {2012}
-}
 @article{Applin2011,
 abstract = {Contribute to the workshop with our understanding of humans, culture and group behavior and to learn from others what type of group behavior is expected as new technologies and their subsequent experiences are created for human use. When we discuss human group behavior, we refer to the definition of a social group: a collection of humans who repeatedly interact within a system. Humans can, and do switch context between environments and blend traces of one into the other in a socially unconscious manner often seemingly simultaneously. We propose that the cultures and behaviors of humans are increasingly actively permeating Internet and network- based applications, as well as those that are geolocal. With the future Internet of things, Dual Reality and Mixed Reality, the opportunity for humans to extend their own blended reality, as well as to create new ones is unfolding. That said, because humans interact within groups, the multiplexing of their mutual blended realities rapidly creates a PoSR. Sorting out the relationships between realities as well as between synchronous and asynchronous time and geolocal space can create a condition where realities are simultaneous and the idea of 'x' can be perceived as equaling 'not x.' We explore this new type of interoperability between virtual and physical, ideational and material, representations and objects and culture.},
 author = {Applin, Sally A},
@@ -82,6 +73,15 @@ pages = {11--14},
 title = {{A Cultural Perspective on Mixed , Dual and Blended Reality}},
 url = {http://www.anthropunk.com/xwiki/wiki/anthropunk/download/Main/WebHome/ACulturalPerspectiveApplinFischer.pdf},
 year = {2011}
+}
+@article{Applin2012,
+abstract = {The technology industry has evolved over the years with a development lens increasingly focused on end users and usage cases. Indeed, for the past decade or more, personas (the designer-created profiles of end users) have become stand-ins for various usage cases and user models. With regard to location aware software and mobile applications, the usage of Dual Reality and Mixed Reality as metaphors have functioned in a similar vein. Just as personas are not people, Mixed and Dual Reality do not fully represent or address the complex usage cases developing as more people do more things, with more software at more times and in more spaces than ever before. This new complex application ecosystem presents greater opportunities and challenges for application design. We discuss ways that developers can use PolySocial Reality (PoSR) to represent a more complete complex structural model},
+author = {Applin, Sally A},
+journal = {Policy},
+number = {February},
+title = {{PolySocial Reality : Prospects for Extending User Capabilities Beyond Mixed , Dual and Blended Reality}},
+url = {http://www.dfki.de/LAMDa/2012/accepted/PolySocial\_Reality.pdf},
+year = {2012}
 }
 @article{Applin2011a,
 abstract = {We consider some possible broad changes that may impact society as a whole as a result of widespread integration of full-spectrum deployed pervasive computing technologies. Our approach considers design challenges for successfully developing and integrating pervasive technologies into culture and society. This is particularly challenging, since pervasive technologies as services are most successful when transparent, invisible, overlooked, unacknowledged and seemingly forgotten by the very groups that embrace their usage and development. We suggest a heuristic for understanding pervasive technology from an anthropological/social perspective, along with a reminder that humans create, shape and use the technologies that affect them. In particular, we look at the impact on social relations in a poly-social world where people must develop means to blend their own realities with those of of others. In conclusion, we remind those developing these technologies, that although we will eventually become wedded and intertwined as cyborgs within this new environment, it may have a positive outcome, creating new social group models for human interaction.},
@@ -94,17 +94,17 @@ title = {{Pervasive Computing in Time and Space: The Culture and Context of 'Pla
 url = {http://dx.doi.org/doi:10.1109/IE.2011.65},
 year = {2011}
 }
-@inproceedings{Applin2013,
-author = {Applin, Sally A and Fischer, Michael},
-booktitle = {Proceedings of the IEEE International Symposium on Technology and Society (ISTAS)},
-title = {{Watching Me, Watching You (Process Surveillance and Agency in the Workplace)}},
-year = {2013}
-}
 @inproceedings{Applin2013a,
 abstract = {We explore how PolySocial Reality (PoSR), a framework for representing how people, devices and communication technologies interrelate, can be applied to developing use cases within integrated IoT and Smart Environment paradigms, giving special consideration to the nature of location-aware messaging from sensors, and the resultant data collection.},
 author = {Applin, Sally A and Fischer, Michael},
 booktitle = {Proceedings of the IEEE Conference on Intelligent User Interfaces (IUI 2013) IUI Workshop on Location Awareness for Mixed and Dual Reality (LAMDa)},
 title = {{Thing Theory: Connecting Humans to Location-Aware Smart Environments}},
+year = {2013}
+}
+@inproceedings{Applin2013,
+author = {Applin, Sally A and Fischer, Michael},
+booktitle = {Proceedings of the IEEE International Symposium on Technology and Society (ISTAS)},
+title = {{Watching Me, Watching You (Process Surveillance and Agency in the Workplace)}},
 year = {2013}
 }
 @misc{Applin2011b,
@@ -503,6 +503,16 @@ url = {https://journals.tdl.org/jvwr/article/view/6124},
 volume = {4},
 year = {2011}
 }
+@incollection{Brey2014,
+author = {Brey, Philip},
+booktitle = {The Oxford Handbook of Virtuality},
+chapter = {2},
+editor = {Grimshaw, Mark},
+pages = {42--54},
+publisher = {Oxford University Press},
+title = {{The Physical and Social Reality of Virtual Worlds}},
+year = {2014}
+}
 @article{Brooke1996,
 abstract = {Previous studies showed that neurons in the monkey premotor cortex became active when performing a particular action and also when observing the same action performed by others. These findings suggest a mirror system for action observation. Recently, bimodal neurons, sensitive both to visual and tactile stimulation, were reported in the parietal cortex, suggesting a potential mirror neuron system for observing and experiencing tactile stimulation. Subsequently, a mirror neuron system for observed touch has been suggested. The current study was designed to determine whether the activation of a sensory mirror system during touch observation is affected by possible attributions of the observed touch to oneself (subjective view) or to somebody else (objective view). In the study, healthy volunteers observed video clips of a touched or nontouched hand either in an egocentric or in an allocentric perspective during functional magnetic resonance imaging. Results showed activation of somatosensory cortices when observing the hand being touched in egocentric as well as in the allocentric perspectives. Moreover, somatosensory responses differed depending on the perspective of the observed touch. We discuss the results in terms of a possible mirror neuron system for observed and experienced touch.},
 author = {Brooke, John},
@@ -799,28 +809,28 @@ publisher = {Oxford University Press},
 title = {{The Virtuality and Reality of Avatar Cyberspace}},
 year = {2014}
 }
-@misc{Daviesb,
-author = {Davies, C J},
-title = {{Database as tar archive suitable for input into pg\_restore}},
-url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
-urldate = {2013-04-01}
-}
 @misc{Daviesc,
 author = {Davies, C J},
 title = {{Database as plain-text SQL script file}},
 url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_sql\_plaintext},
 urldate = {2013-04-01}
 }
-@misc{Daviesa,
+@misc{Daviesb,
 author = {Davies, C J},
-title = {{Pangolin source code}},
-url = {https://bitbucket.org/cj\_davies/viewer-release-serial-io},
+title = {{Database as tar archive suitable for input into pg\_restore}},
+url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
 urldate = {2013-04-01}
 }
 @misc{Davies,
 author = {Davies, C J},
 title = {{Arduino sketch for Pangolin}},
 url = {https://bitbucket.org/cj\_davies/arduino\_hmc6434\_ublox\_max\_6\_tinygps},
+urldate = {2013-04-01}
+}
+@misc{Daviesa,
+author = {Davies, C J},
+title = {{Pangolin source code}},
+url = {https://bitbucket.org/cj\_davies/viewer-release-serial-io},
 urldate = {2013-04-01}
 }
 @inproceedings{Davies2012,
@@ -1267,16 +1277,16 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/17677199},
 volume = {75},
 year = {2007}
 }
-@misc{Google2012a,
-author = {Google},
-title = {{My Tracks - Android Apps on Google Play}},
-year = {2012}
-}
 @misc{Google2012,
 author = {Google},
 title = {{My Tracks - Android Apps on Google Play}},
 url = {https://play.google.com/store/apps/details?id=com.google.android.maps.mytracks\&hl=en},
 urldate = {2012-03-28},
+year = {2012}
+}
+@misc{Google2012a,
+author = {Google},
+title = {{My Tracks - Android Apps on Google Play}},
 year = {2012}
 }
 @misc{Greenhalgh,
@@ -1336,17 +1346,17 @@ title = {{Bridging physical and virtual worlds with tagged documents, objects an
 url = {http://doi.acm.org/10.1145/632716.632738},
 year = {1999}
 }
-@misc{Hart,
-author = {Hart, Mikal},
-title = {{TinyGPS}},
-url = {http://arduiniana.org/libraries/tinygps/},
-urldate = {2013-04-01}
-}
 @misc{Harta,
 author = {Hart, Mikal},
 title = {{TinyGPS}},
 url = {http://arduiniana.org/libraries/tinygps/},
 urldate = {2013-03-31}
+}
+@misc{Hart,
+author = {Hart, Mikal},
+title = {{TinyGPS}},
+url = {http://arduiniana.org/libraries/tinygps/},
+urldate = {2013-04-01}
 }
 @misc{Haverinen2009,
 abstract = {Magnetic field fluctuations in modern buildings arise from both natural and man-made sources, such as steel and reinforced concrete structures, electric power systems, electric and electronic appliances, and industrial devices. If the anomalies of the magnetic field inside the building are nearly static and they have sufficient local variability, they provide a unique magnetic fingerprint that can be utilized in global self-localization. In this article, a Monte Carlo localization (MCL) technique based on this hypothesis is proposed. The feasibility of the technique is demonstrated by presenting a series of global localization experiments conducted in four arbitrarily selected buildings, including a hospital. The experiment setup consists of a mobile robot instrumented with a 3-axis magnetometer and a computer. In addition, successful human self-localization experiments were conducted by using a wireless wearable magnetometer. The reported experiments suggest that the ambient magnetic field may remain sufficiently stable for longer periods of time, giving support for self-localization techniques utilizing the local deviations of the field.},
@@ -1377,16 +1387,6 @@ url = {http://linkinghub.elsevier.com/retrieve/pii/S0921889009001092},
 volume = {57},
 year = {2009}
 }
-@misc{Heeter2003,
-abstract = {I have lived in San Francisco while working as a full-time virtual faculty member for Michigan State University for nearly six years. Unlike most humans, I spend a larger proportion of every day as a virtual person than as a physical person. This article is adapted from a keynote speech I delivered at the Fourth International Workshop on Presence in Philadelphia in May of 2001. I use a personal narrative style to explore issues and to question some of the research community's prevailing assumptions about presence. Lombard and Ditton's (1997) frequently cited conceptualization defines presence as a “perceptual illusion of nonmediation” that occurs “when a person fails to perceive or acknowledge the existence of a medium in his/her communication environment and responds as he/she would if the medium were not there.” The underlying assumption is that, in the absence of technology, everyone experiences continuous presence at a constant intensity throughout their lives. Instead, this article suggests that presence is not a constant of everyday nonmediated experience. Careful consideration of unmediated (real) presence might help the conceptualization and study of mediated presence.},
-author = {Heeter, Carrie},
-booktitle = {Presence: Teleoperators and Virtual Environments},
-number = {4},
-pages = {335--345},
-title = {{Reflections on Real Presence by a Virtual Person}},
-volume = {12},
-year = {2003}
-}
 @article{Heeter1992,
 abstract = {What do you feel when you enter a virtual world? What creates the experience of presence? What factors contribute to making you feel like you are there1 ?},
 author = {Heeter, Carrie},
@@ -1400,6 +1400,16 @@ title = {{Being there: The subjective experience of presence}},
 url = {http://dl.acm.org/citation.cfm?id=196589},
 volume = {1},
 year = {1992}
+}
+@misc{Heeter2003,
+abstract = {I have lived in San Francisco while working as a full-time virtual faculty member for Michigan State University for nearly six years. Unlike most humans, I spend a larger proportion of every day as a virtual person than as a physical person. This article is adapted from a keynote speech I delivered at the Fourth International Workshop on Presence in Philadelphia in May of 2001. I use a personal narrative style to explore issues and to question some of the research community's prevailing assumptions about presence. Lombard and Ditton's (1997) frequently cited conceptualization defines presence as a “perceptual illusion of nonmediation” that occurs “when a person fails to perceive or acknowledge the existence of a medium in his/her communication environment and responds as he/she would if the medium were not there.” The underlying assumption is that, in the absence of technology, everyone experiences continuous presence at a constant intensity throughout their lives. Instead, this article suggests that presence is not a constant of everyday nonmediated experience. Careful consideration of unmediated (real) presence might help the conceptualization and study of mediated presence.},
+author = {Heeter, Carrie},
+booktitle = {Presence: Teleoperators and Virtual Environments},
+number = {4},
+pages = {335--345},
+title = {{Reflections on Real Presence by a Virtual Person}},
+volume = {12},
+year = {2003}
 }
 @article{Heim1998,
 abstract = {"Virtual Realism" is an art form and a way of living with technology. To explain the concept, the author begins with the conflict inherent in the philosophy of technology (Unabomber and the computer culture). The article draws on interactive art, software engineering, and popular culture to clarify the issue of lifestyles. Twelve suggestions are made to develop a harmony of technology and lifestyle. The article is a chapter in a book by the same title (Oxford U. Press, 1998)>},
@@ -1503,17 +1513,17 @@ url = {http://eightbar.co.uk/2006/06/27/wimbledon-in-second-life/},
 urldate = {2012-05-21},
 year = {2006}
 }
-@misc{Hughes2006a,
-author = {Hughes, Ian},
-title = {{Second Life – Outside in}},
-url = {http://eightbar.co.uk/2006/04/09/second-life-outside-in/},
-urldate = {2012-05-21},
-year = {2006}
-}
 @misc{Hughes2006b,
 author = {Hughes, Ian},
 title = {{Well it got my attention – Second Life}},
 url = {http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/},
+urldate = {2012-05-21},
+year = {2006}
+}
+@misc{Hughes2006a,
+author = {Hughes, Ian},
+title = {{Second Life – Outside in}},
+url = {http://eightbar.co.uk/2006/04/09/second-life-outside-in/},
 urldate = {2012-05-21},
 year = {2006}
 }
@@ -2421,6 +2431,11 @@ photojournalism and everyday use}},
 volume = {36},
 year = {1998}
 }
+@misc{Mann1994,
+author = {Mann, Steve},
+title = {{'Mediated Reality'}},
+year = {1994}
+}
 @misc{Mann2002a,
 abstract = {Mixed Reality exists in many forms along a continuum from Augmented Reality (reality enhanced by graphics, such as Sutherland's work from more than 30 years ago) to more recent efforts at Augmented Virtuality (graphics enhanced by reality, graphics enhanced by video, etc.). Mixed Reality provides numerous ways to add together (mix) various proportions of real and virtual worlds. However, Mediated Reality is an even older tradition, introduced by Stratton more than 100 years ago. Stratton presented two important ideas:  1. the idea of constructing special eyeglasses to modify how he saw the world; and  2. the ecologically motivated approach to conducting his experiments within the domain of his own everyday personal life.  Stratton's seminal work has inspired a wide variety of devices that can be used to augment, deliberately diminish, or otherwise alter human visual perception. The first half of this paper presents some of the problems with the existing taxonomies (e.g. mixed reality) and distinctions (e.g. optical versus video see-through), that arise when we consider reality-modifying devices. The second half of the paper presents various new designs for reality-modifying devices, especially those used to modify only a portion of the visual reality stream, suitable for use in everyday life. These devices have the appearance of ordinary bifocal eyeglasses and reading glasses. Finally, a new kind of reality mediator that uses the eyeglass frames themselves as the mediating element is presented. This design makes it impossible for those other than the wearer, even upon very close inspection, to determine whether or not the eyeglasses contain a reality mediator. Such designs make possible livelong experiments and mediated reality experiences in personal everyday life, without the social stigma associated with obvious reality--modifying devices.  },
 author = {Mann, Steve},
@@ -2429,11 +2444,6 @@ keywords = {HCI,Mediated Reality,UX},
 title = {{Mediated Reality with implementations for everyday life}},
 url = {http://www.mitpressjournals.org/toc/pres/11/4},
 year = {2002}
-}
-@misc{Mann1994,
-author = {Mann, Steve},
-title = {{'Mediated Reality'}},
-year = {1994}
 }
 @misc{Mann2002,
 abstract = {Diminished reality is as important as augmented reality, and both are possible with a device called the Reality Mediator . Over the past two decades, we have designed, built, worn, and tested many different embodiments of this device in the context of wearable computing, Incorporated into the Reality Mediator is an "EyeTap" system, which is a device that quantifies and resynthesizes light that would otherwise pass through one or both lenses of the eye(s) of a wearer. The functional principles of EyeTap devices are discussed, in detail. The EyeTap diverts into a spatial measurement system at least a portion of light that would otherwise pass through the center of projection of at least one lens of an eye of a wearer. The Reality Mediator has at least one mode of operation in which it reconstructs these rays of light, under the control of a wearable computer system. The computer system then uses new results in algebraic projective geometry and comparametric equations to perform head tracking, as well as to track motion of rigid planar patches present in the scene. We describe how our tracking algorithm allows an EyeTap to alter the light from a particular portion of the scene to give rise to a computer-controlled, selectively mediated reality. An important difference between mediated reality and augmented reality includes the ability to not just augment but also deliberately diminish or otherwise alter the visual perception of reality. For example, diminished reality allows additional information to be inserted without causing the user to experience information overload. Our tracking algorithm also takes into account the effects of automatic gain control, by performing motion estimation in both spatial as well as tonal motion coordinates.},
@@ -2650,27 +2660,17 @@ title = {{The Second Life of a Sensor: Integrating Real-world Experience in Virt
 url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.147.1457},
 year = {2008}
 }
-@misc{MIT,
-annote = {        From Duplicate 1 (                           Responsive Environments Group                         - MIT )
-                
-MIT's Media Laboratory (particularly the Responsive Environments group
-under the leadership of Joseph Paradiso) was responsible for essentially
-the inaugural work in cross reality, with Joshua Lifton's PhD \& the
-associated projects in the group framing 'dual reality', as it was
-originally known, as a new application domain for sensor/actuator
-networks, virtual worlds \& media creation. Lifton himself confirms that
-cross reality \& dual reality are the same thing by different names.
-        
-      },
-author = {MIT},
-howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/\}},
-title = {{Responsive Environments Group}},
-url = {http://www.media.mit.edu/resenv/}
-}
 @misc{mit:doppel,
 author = {MIT},
 howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
 title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
+}
+@misc{MIT,
+annote = {From Duplicate 1 ( Responsive Environments Group - MIT )},
+author = {MIT},
+howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/\}},
+title = {{Responsive Environments Group}},
+url = {http://www.media.mit.edu/resenv/}
 }
 @article{Mittal2011,
 author = {Mittal, Manas and Paradiso, Joseph A},
@@ -2707,12 +2707,6 @@ pages = {295--296},
 title = {{Localization System for Large Indoor Environments Using Invisible markers}},
 year = {2008}
 }
-@inproceedings{Okura2011,
-author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
-booktitle = {International Conference on Computer Graphics and Interactive Techniques, SIGGRAPH 2011, Vancouver, BC, Canada, August 7-11, 2011 , Poster Proceedings},
-title = {{Fly-through Heijo Palace Site: Historical Tourism System Using Augmented Telepresence}},
-year = {2011}
-}
 @article{Okura2006,
 abstract = {Augmented Telepresence is a technique for viewing a remote site using immersive displays.},
 author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
@@ -2722,6 +2716,12 @@ pages = {4503--4503},
 title = {{Fly-through Heijo Palace Site : Augmented Telepresence Using Aerial Omnidirectional Videos}},
 volume = {1},
 year = {2006}
+}
+@inproceedings{Okura2011,
+author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
+booktitle = {International Conference on Computer Graphics and Interactive Techniques, SIGGRAPH 2011, Vancouver, BC, Canada, August 7-11, 2011 , Poster Proceedings},
+title = {{Fly-through Heijo Palace Site: Historical Tourism System Using Augmented Telepresence}},
+year = {2011}
 }
 @misc{Oliver2010,
 author = {Oliver, Iain A and Miller, Alan H D and Allison, Colin},
@@ -2758,12 +2758,6 @@ url = {https://journals.tdl.org/jvwr/article/view/660/536},
 volume = {2},
 year = {2009}
 }
-@misc{OpenGeospatialConsortium,
-annote = {Videos/more information on demonostrations of SWE at OWS-4, covers the dirty bomb scenario.},
-author = {{Open Geospatial Consortium}, Inc.},
-title = {{OWS-4 Demonstration}},
-url = {http://www.opengeospatial.org/pub/www/ows4/index.html}
-}
 @misc{OpenGeospatialConsortiuma,
 annote = {        From Duplicate 1 (                           Welcome to the GSN Project                         - Open Geospatial Consortium, Inc. )
                 
@@ -2774,6 +2768,12 @@ author = {{Open Geospatial Consortium}, Inc.},
 howpublished = {$\backslash$url\{http://sourceforge.net/apps/trac/gsn/\}},
 title = {{Welcome to the GSN Project}},
 url = {http://sourceforge.net/apps/trac/gsn/}
+}
+@misc{OpenGeospatialConsortium,
+annote = {Videos/more information on demonostrations of SWE at OWS-4, covers the dirty bomb scenario.},
+author = {{Open Geospatial Consortium}, Inc.},
+title = {{OWS-4 Demonstration}},
+url = {http://www.opengeospatial.org/pub/www/ows4/index.html}
 }
 @misc{OpenVirtualWorldsgroupSchoolofComputerScience,
 author = {{Open Virtual Worlds group, School of Computer Science}, University of St Ancrews},
@@ -2982,6 +2982,20 @@ author = {Pardue, Laurel and Dublon, Gershon and Jethwani, Anisha and Prouty, Je
 title = {{DoppelLab}},
 url = {http://www.media.mit.edu/resenv/doppellab/}
 }
+@inproceedings{park:xcream,
+address = {New York, NY, USA},
+author = {Park, Kyungeun and Yun, Jekuk and Byun, Changhyun and Kim, Yanggon and Chang, Juno},
+booktitle = {Proceedings of the 12th International Conference on Information Integration and Web-based Applications \&\#38; Services},
+doi = {http://doi.acm.org/10.1145/1967486.1967597},
+isbn = {978-1-4503-0421-4},
+keywords = {RFID (radio frequency identifcation),USN (universal sensor network),XCREAM (XLogic collaborative RFID/USN-Enabled ada,collaboration,middleware framework},
+pages = {692--695},
+publisher = {ACM},
+series = {iiWAS '10},
+title = {{XCREAM: collaborative middleware framework for RFID/USN-enabled applications}},
+url = {http://doi.acm.org/10.1145/1967486.1967597},
+year = {2010}
+}
 @inproceedings{Park2010,
 address = {New York, New York, USA},
 annote = {'XLogic Collaborative RFID/USN-Enabled Adaptive Middleware' aims to all-
@@ -3005,20 +3019,6 @@ pages = {692},
 publisher = {ACM Press},
 title = {{XCREAM}},
 url = {http://dl.acm.org/citation.cfm?id=1967486.1967597},
-year = {2010}
-}
-@inproceedings{park:xcream,
-address = {New York, NY, USA},
-author = {Park, Kyungeun and Yun, Jekuk and Byun, Changhyun and Kim, Yanggon and Chang, Juno},
-booktitle = {Proceedings of the 12th International Conference on Information Integration and Web-based Applications \&\#38; Services},
-doi = {http://doi.acm.org/10.1145/1967486.1967597},
-isbn = {978-1-4503-0421-4},
-keywords = {RFID (radio frequency identifcation),USN (universal sensor network),XCREAM (XLogic collaborative RFID/USN-Enabled ada,collaboration,middleware framework},
-pages = {692--695},
-publisher = {ACM},
-series = {iiWAS '10},
-title = {{XCREAM: collaborative middleware framework for RFID/USN-enabled applications}},
-url = {http://doi.acm.org/10.1145/1967486.1967597},
 year = {2010}
 }
 @misc{Parris2007,
@@ -3114,17 +3114,6 @@ publisher = {Springer-Verlag},
 title = {{Cyberspace as Representation of Space Experience: In Defence of a Phenomenological Approach}},
 year = {2002}
 }
-@misc{Regenbrecht2002a,
-abstract = {It has long been argued that the possibility to interact in and with a virtual environment (VE) enhances the sense of pres- ence. On the basis of a three-component model of presence, we specify this hypothesis and argue that the mental represen- tation of possible actions should especially enhance spatial presence, and to a lesser extent the involvement and realness of a VE. We support this hypothesis in three studies. A corre- lative study showed that self-reported interaction possibilities correlated significantly with spatial presence, but not with the other two factors. A first experimental study showed that pos- sible self-movement significantly increased spatial presence and realness. A second experimental study showed that even the illusion of interaction, with no actual interaction taking place, significantly increased spatial presence.},
-author = {Regenbrecht, Holger and Schubert, Thomas},
-booktitle = {Presence: Teleoperators and Virtual Environments},
-issn = {1054-7460},
-number = {4},
-pages = {425--434},
-title = {{Real and Illusory Interactions Enhance Presence in Virtual Environments}},
-volume = {11},
-year = {2002}
-}
 @inproceedings{Regenbrecht2002,
 author = {Regenbrecht, Holger and Schubert, Thomas},
 booktitle = {Proceedings of the 5th Annual International Workshop on Presence},
@@ -3136,6 +3125,17 @@ author = {Regenbrecht, Holger and Schubert, Thomas},
 keywords = {augmented reality,sense of presence},
 title = {{Measuring Presence in Augmented Reality Environments : Design and a First Test of a Questionnaire}},
 year = {1992}
+}
+@misc{Regenbrecht2002a,
+abstract = {It has long been argued that the possibility to interact in and with a virtual environment (VE) enhances the sense of pres- ence. On the basis of a three-component model of presence, we specify this hypothesis and argue that the mental represen- tation of possible actions should especially enhance spatial presence, and to a lesser extent the involvement and realness of a VE. We support this hypothesis in three studies. A corre- lative study showed that self-reported interaction possibilities correlated significantly with spatial presence, but not with the other two factors. A first experimental study showed that pos- sible self-movement significantly increased spatial presence and realness. A second experimental study showed that even the illusion of interaction, with no actual interaction taking place, significantly increased spatial presence.},
+author = {Regenbrecht, Holger and Schubert, Thomas},
+booktitle = {Presence: Teleoperators and Virtual Environments},
+issn = {1054-7460},
+number = {4},
+pages = {425--434},
+title = {{Real and Illusory Interactions Enhance Presence in Virtual Environments}},
+volume = {11},
+year = {2002}
 }
 @article{Reilly2010,
 abstract = {We introduce TwinSpace, a flexible software infrastructure for combining interactive workspaces and collaborative virtual worlds. Its design is grounded in the need to support deep connectivity and flexible mappings between virtual and real spaces to effectively support collaboration. This is achieved through a robust connectivity layer linking heterogeneous collections of physical and virtual devices and services, and a centralized service to manage and control mappings between physical and virtual. In this paper we motivate and present the architecture of TwinSpace, discuss our experiences and lessons learned in building a generic framework for collaborative cross-reality, and illustrate the architecture using two implemented examples that highlight its flexibility and range, and its support for rapid prototyping.},
@@ -3454,6 +3454,16 @@ url = {http://scholar.google.com/scholar?hl=en\&btnG=Search\&q=intitle:3D3C+Real
 volume = {1},
 year = {2008}
 }
+@article{Sivan2008,
+annote = {Interesting bit about Vuzix iWear VR920 3D goggles which, through a special driver for Second Life, allowed you to view a virtual world simply by turning your head (but of course didn't work for any other virtual world \& in fact only a specific version of Second Life) - but shows that controlling the gaze of the avatar/camera from a real-time external data source is possible through modification of the VW server (eg a region module in OpenSim).},
+author = {Sivan, Yesha},
+journal = {Journal of Virtual Worlds Research},
+number = {2},
+title = {{Real Virtual Worlds SOS (State of Standards) Q3-2008}},
+url = {http://journals.tdl.org/jvwr/article/view/359},
+volume = {1},
+year = {2008}
+}
 @article{Sivan2009,
 annote = {        From Duplicate 1 (                           Overview: State of Virtual Worlds Standards in 2009                         - Sivan, Yesha )
                 
@@ -3468,16 +3478,6 @@ title = {{Overview: State of Virtual Worlds Standards in 2009}},
 url = {http://journals.tdl.org/jvwr/article/view/671/539},
 volume = {2},
 year = {2009}
-}
-@article{Sivan2008,
-annote = {Interesting bit about Vuzix iWear VR920 3D goggles which, through a special driver for Second Life, allowed you to view a virtual world simply by turning your head (but of course didn't work for any other virtual world \& in fact only a specific version of Second Life) - but shows that controlling the gaze of the avatar/camera from a real-time external data source is possible through modification of the VW server (eg a region module in OpenSim).},
-author = {Sivan, Yesha},
-journal = {Journal of Virtual Worlds Research},
-number = {2},
-title = {{Real Virtual Worlds SOS (State of Standards) Q3-2008}},
-url = {http://journals.tdl.org/jvwr/article/view/359},
-volume = {1},
-year = {2008}
 }
 @article{Sivan2011,
 abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
@@ -3600,6 +3600,13 @@ author = {Sonitor},
 title = {{Enabling Technology}},
 url = {http://www.sonitor.com/technology/enabling-technology},
 urldate = {2013-02-11}
+}
+@phdthesis{Soraker2010,
+author = {Soraker, J.H.},
+file = {:home/cj/SORAKER\_DISSERTATION\_CONTENTS\_FINAL.pdf:pdf},
+isbn = {9789036530101},
+title = {{The value of virtual worlds: A Philosophical Analysis of Virtual Worlds and their Potential Impact on Well-Being}},
+year = {2010}
 }
 @incollection{Steed2014,
 author = {Steed, A},
@@ -3816,13 +3823,6 @@ title = {{TinyOS Home Page}},
 url = {http://www.tinyos.net/},
 urldate = {2012-02-22}
 }
-@book{Turkle2011,
-author = {Turkle, Sherry},
-pages = {384},
-publisher = {Basic Books},
-title = {{Alone Together: Why We Expect More From Technology And Less From Each Other}},
-year = {2011}
-}
 @book{Turkle1997,
 author = {Turkle, Sherry},
 edition = {1st Touchs},
@@ -3842,6 +3842,13 @@ publisher = {Rowman \& Littlefield},
 title = {{Our Split Screens}},
 year = {2004}
 }
+@book{Turkle2011,
+author = {Turkle, Sherry},
+pages = {384},
+publisher = {Basic Books},
+title = {{Alone Together: Why We Expect More From Technology And Less From Each Other}},
+year = {2011}
+}
 @incollection{Tzortzaki2002,
 author = {Tzortzaki, Delia},
 booktitle = {Virtual Space: Spatiality in Virtual Inhabited 3D Worlds},
@@ -3852,17 +3859,17 @@ publisher = {Springer-Verlag},
 title = {{Virtual Reality as Simulation: The CAVE as "Space of Illusion" in Museum Displays}},
 year = {2002}
 }
-@misc{U-bloxAGa,
-author = {u-blox AG},
-title = {{u-center GPS evaluation software}},
-url = {http://www.u-blox.com/en/evaluation-tools-a-software/u-center/u-center.html},
-urldate = {2012-03-28}
-}
 @misc{U-bloxAG,
 author = {u-blox AG},
 title = {{MAX-6 series}},
 url = {http://www.u-blox.com/en/gps-modules/pvt-modules/max-6.html},
 urldate = {2013-02-11}
+}
+@misc{U-bloxAGa,
+author = {u-blox AG},
+title = {{u-center GPS evaluation software}},
+url = {http://www.u-blox.com/en/evaluation-tools-a-software/u-center/u-center.html},
+urldate = {2012-03-28}
 }
 @misc{U-bloxAG2012,
 author = {u-blox AG},
