--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -31,7 +31,7 @@ Furthermore, in place of a hand held display such as the tablet used by VTW, the
 %=========================================================================================================
 
 \subsection{The Mirrorshades Platform}
-
+\label{the-mirrorshades-platform}
 Figure \ref{systemarchitecture} presents a high level architectural overview of the successive PR platform, dubbed Mirrorshades\footnote{\textbf{Mirrorshades: The Cyberpunk Anthology} (1986) is a defining cyberpunk short story collection edited by Bruce Sterling, who explains how mirrored sunglasses became a literary badge or totem for the cyberpunk movement, whose fiction has frequently involved immersive multi-user virtual environments and head mounted displays.}. This is a parallel reality platform which allows its user to observe and move around their RW environment whilst wearing a HMD, with their position tracked by an IPS, switching between viewing RW visual stimuli provided by cameras mounted to the HMD and VR visual stimuli from the equivalent vantage point of the reconstruction, as tracked by the IPS. A controller held by the user allows them to trigger these switches between RW and VR. The mobile client that produces the graphical content delivered to the HMD can is carried about the person in a bag/satchel.
 
 \begin{figure}[h]
