--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -20,7 +20,7 @@
 
 %\section{Introduction}
 
-The subject of this thesis is a new category of alternate reality that allows its user to observe and move around their real environment whilst also being able to view a complete alternative virtual environment from the equivalent vantage point. This combination of real and virtual environments, combined with maintained user mobility, is not fully encapsulated by any previously defined alternate reality terminology. It is therefore necessary to explore this terminology in order to correctly frame this new system in relation to them. The closest existing category is that of the `cross reality' paradigm; a cross reality system holds the distinction of two discrete environments, one real and one virtual, both complete unto themselves, however cross reality focusses on a bidirectional exchange of information between the environments and not upon user mobility and tandem visual engagement with both environments.
+The subject of this thesis is a new category of alternate reality that allows its user to observe and move around their real environment whilst also being able to view a complete alternative virtual environment from the equivalent vantage point. This combination of real and virtual environments, combined with maintained user mobility, is not fully encapsulated by any previously defined alternate reality terminology. It is therefore necessary to explore this terminology in order to correctly frame this new system in relation to them. The closest existing category is that of the `cross reality' paradigm; a cross reality system holds the distinction of two discrete environments, one real and one virtual, both complete unto themselves, however focusses on a bidirectional exchange of information between environments rather than tandem visual engagement with them both.
 
 The new category of `parallel reality' is thus proposed to describe systems that combine complete real and virtual environments together in a manner that allows mobile, visual exploration of them both in tandem, relating it and positioning it against previously explored alternate reality terminology.
 
@@ -33,15 +33,23 @@ The new category of `parallel reality' is thus proposed to describe systems that
 %=========================================================================================================
 %=========================================================================================================
 
-\section{Defining Alternate Realities}
+\section{Overview}
 
-Alternate realities, any situations in which the environmental stimuli received by a subject have been somehow modified or mediated, have received substantial attention in recent decades. These themes have been explored for purposes as diverse as education~\cite{Warburton2009} and new forms of data visualisation~\cite{Coleman2009} to medical~\cite{TenEyck2011} and military training~\cite{Qiu2009} in addition to entertainment~\cite{Scherrer2008}. Although terms such as \textit{mixed reality} and \textit{augmented reality} are now relatively common, both in the literature and in the mainstream, definitions of such terms have often been used in vague and even conflicting manners.
+Alternate realities, explored in the context of this thesis as any situations in which the environmental stimuli received by a subject have been somehow modified or mediated (often by computer), have received substantial attention in recent decades. These themes have been explored for purposes as diverse as education~\cite{Warburton2009} and new forms of data visualisation~\cite{Coleman2009} to medical~\cite{TenEyck2011} and military training~\cite{Qiu2009} in addition to ever present entertainment applications~\cite{Scherrer2008}. Although terms such as \textit{virtual reality} and \textit{augmented reality} are now relatively common, both in the literature and in the mainstream, definitions of alternate reality terms such as these have often been used in vague and even conflicting manners.
 
 \begin{quote}
 	\textit{``It is a characteristic feature of virtuality that it causes puzzlement regarding its relation to reality''}~\cite{Brey2014}
 \end{quote}
 
-This chapter investigates popular definitions, classifications and comparisons of alternate realities, combining and modifying these parameters to produce a canonical set of definitions for the remainder of this thesis, allowing \textit{parallel reality} to be introduced into a sound classification framework.
+The remainder of this chapter investigates the different existing categories of alternate realities and surveys systems and models proposed for their classification and differentiation, performing updates to some, to produce a canonical set of definitions and distinguishing characteristics for existing alternate realities. Into this framework a new category of alternate reality, parallel reality, is introduced and a novel method for visualising the user experience of alternate reality systems (including parallel reality ones) is put forth.
+
+%=========================================================================================================
+
+\section{Defining Alternate Realities}
+
+The issue of
+
+%=========================================================================================================
 
 \subsection{Milgram and Kishino's Reality-Virtuality Continuum}
 \label{milgram&kishino}
