--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -172,9 +172,9 @@ Telepresence & The ability for a user to experience a sense of presence at a rea
 
 %=========================================================================================================
 
-Virtual Reality (VR) & The polar opposite of reality, an environment that consists solely of virtual objects, with computer-based quantitative information associated with and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer~\cite{Milgram1999, Want2009}.
+Virtual Reality (VR) & The polar opposite of reality, an environment that consists solely of virtual objects, with computer-based quantitative information associated with and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer~\cite{Milgram1999, Want2009}. \\
 
-While traditional definitions of virtual reality require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (such as by using Head Mounted Displays and body tracking techniques to remove logical anchors to the real world~\cite{Druck2006}) the criteria adopted herein are less drastic, classifying the virtual environments presented by video games viewed via 2D monitors as rudimentary implementations of virtual reality; they are after all completely modelled environments that exist entirely separate to the real world. \\
+ & While traditional definitions of virtual reality require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (such as by using Head Mounted Displays and body tracking techniques to remove logical anchors to the real world~\cite{Druck2006}) the criteria adopted herein are less drastic, classifying the virtual environments presented by video games viewed via 2D monitors as rudimentary implementations of virtual reality; they are after all completely modelled environments that exist entirely separate to the real world. \\
 		
 \midrule
 
@@ -481,7 +481,7 @@ Parallel Reality (PR) & Systems comprising two environments, one real and the ot
 
 %\subsection{Presence}
 \label{lit-review-presencec}
-Any investigation into alternate realities, virtual reality in particular, is likely to involve discussion of the experiential aspects of these new realities with the concept of \textit{presence}, the subjective experience of `being in' one place or environment even when one is physically situated in another~\cite{Witmer1998}, featuring prominently in such discussions. Presence is distinguished from the concept of \textit{immersion}, an objective description of a technology describing the extent to which it is capable of delivering an illusion of reality to the senses of the user~\cite{Slater1997}. In current theoretical models, the sense of presence is seen as the outcome, or a direct function of, immersion; the more inclusive, extensive, surrounding and vivd the virtual environment is, or the more similar the transformations in the virtual environment are to those in the real world, the higher the sense of presence~\cite{Constantin2003}.
+Any investigation into alternate realities, virtual reality in particular, is likely to involve discussion of the experiential aspects of these new realities and parallel reality is no exception. The concept of \textit{presence}, the subjective experience of `being in' one place or environment even when one is physically situated in another~\cite{Witmer1998}, features prominently in such discussions. Presence is distinguished from the concept of \textit{immersion}, an objective description of a technology describing the extent to which it is capable of delivering an illusion of reality to the senses of the user~\cite{Slater1997}. In current theoretical models, the sense of presence is seen as the outcome, or a direct function of, immersion; the more inclusive, extensive, surrounding and vivd the virtual environment is, or the more similar the transformations in the virtual environment are to those in the real world, the higher the sense of presence~\cite{Constantin2003}.
 
 Related is the concept of \textit{involvement}, defined in this context as the psychological state experienced as a consequence of focusing one's energy and attention on a coherent set of stimuli and it is theorized that both involvement and immersion are necessary for experiencing a sense of presence~\cite{Witmer1998}.
 
@@ -491,7 +491,7 @@ Related is the concept of \textit{involvement}, defined in this context as the p
 
 \newcommand{\absencefootnote}{\footnote{\textbf{Absence} is defined as \textit{``a psychological focus on \ldots\ conceptual processing''}~\cite{Waterworth2001}.}}
 
-Waterworth and Waterworth present the \textit{three dimensions of virtual experience} model for visualising and discussing virtual/physical experience in terms of three separate `axes of attention', one of which relates closely to the popular use of the term presence in alternate reality literature~\cite{Waterworth2001}. This division of the concept of virtual/physical experience which allows the separate consideration of which environment a user is attending to the stimuli from and how \textit{much} they are attending to these stimuli (wherever they may come from) will be diagnostic in out later investigation of the experience of parallel reality systems that promote the transitioning between the stimuli of two separate environments, particularly where the concept of the `break in presence' is concerned.
+Waterworth and Waterworth present the \textit{three dimensions of virtual experience} model for visualising and discussing virtual/physical experience in terms of three separate `axes of attention', one of which relates closely to the popular use of the term presence in alternate reality literature~\cite{Waterworth2001}. This division of the concept of virtual/physical experience which allows the separate consideration of which environment a user is attending to the stimuli from and how \textit{much} they are attending to these stimuli (wherever they may come from) will be diagnostic in our later investigation of the experience of parallel reality systems that promote the transition between the stimuli of two separate environments, particularly where the concept of the `break in presence' is concerned.
 
 In the three dimensions of virtual experience model, the \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from; the \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning and perceptual/concrete processing, where complex conceptual reasoning results in little attention being paid to processing environmental percepts (whether originating from real stimuli, virtual stimuli, or a mix) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}; and the \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, a mix of both, or not directed toward any percepts in the case of completely `absent' conceptual reasoning, a concept that is clarified by the authors in a subsequent publication;
 
@@ -534,8 +534,6 @@ Furthermore one can postulate as to the essence of Lifton's vacancy with regard 
 
 \label{transitions_in_parallel_reality}
 
-\newcommand{\breakinpresencefootnote}{\footnote{The definition of \textbf{break in presence} adopted herein is the second from Waterworth and Waterworth~\cite{Waterworth2001} (p205): a movement along the focus axis away from presence in the real or a virtual environment and toward absence, which also relates to a reduction in involvement. This differs to Slater and Steed's original definition in~\cite{Slater2000} as they considered presence only in terms of attending to stimuli from a virtual environment, with a break in presence as a Gestalt switch to instead attending to stimuli from the real environment. Waterworth and Waterworth's model considers presence in terms of attending to stimuli from either the real \textit{or a virtual} environment, with a break in presence representing absence in the sense of heightened conceptual load and the resultant reduced perceptual processing of environmental stimuli originating from \textit{either} the real or a virtual environment. This definition better fits the situation invoked by the system developed in this thesis, which is concerned with intentionally and willingly switching engagement between stimuli from both real and virtual environments, rather than engaging with stimuli from only a virtual environment in a scenario where stimuli from the real environment are considered a `distraction'.}}
-
 The novel aspect of PR is the ability it imparts upon its user to switch their locus of attention between equivalent vantage points in RW and VR environments. In order to achieve the highest quality of experience with this style of interaction with a PR system, it is vital to determine how best to implement the transitions; that is, to mitigate the increased cognitive load (manifesting as increased conceptual reasoning and reduced perceptual processing) required to comprehend each transition, as increased cognitive load will detract from engagement with the environments and reduce the user's willingness to perform subsequent transitions.
 
 %In the systems developed by this thesis the users maintain mobility, such that they can move around the two environments in tandem, thus extending existing XR platforms that featured static locations at which a user in the real environment could see into the virtual and vice-versa. This combination of unhindered mobility with the ability to transition between real and virtual stimuli thus alleviates the vacancy problem.
@@ -546,9 +544,13 @@ Whilst some researchers support the notion that in systems where more than one e
 
 This latter position is particularly apt for situations wherein the RW and VR environments share the same fundamental layout and dimensions (spatial equivalence), as those of the PR systems explored within this thesis do, as inherent familiarity between two environments intuitively reduces the cognitive load associated with transitioning between them.
 
-Furthermore, the notion of experience of presence as changing continually from moment-to-moment~\cite{Heeter2003, Ijsselsteijn1998} lends confidence to the successful mitigation of the cognitive load associated with these transitions to manageable levels. One might even liken this `switching' between RW and VR to the `cycling through' behaviour observed in users of virtual communities, which stemmed from the `window' concept of modern computer operating systems~\cite{Turkle2004} and accelerated with mobile devices to the point where for many users today rapid cycling stabilizes them into a sense of `continual copresence', where even just a mobile phone brings them into a world of continual partial attention to any particular subject or environment~\cite{Turkle2011} - the advent of mobile phones has previously been credited with allowing a person to \textit{``be in many places at once''} and to play multiple roles~\cite{Terashima2001}. %HyperReality p148
+Furthermore, the notion of experience of presence as changing continually from moment-to-moment~\cite{Heeter2003, Ijsselsteijn1998} lends confidence to the successful mitigation of the cognitive load associated with these transitions to manageable levels. One might even liken this `switching' between RW and VR to the `cycling through' behaviour observed in users of virtual communities, which stemmed from the `window' concept of modern computer operating systems~\cite{Turkle2004} and accelerated with mobile devices to the point where for many users today rapid cycling stabilizes them into a sense of `continual copresence', where even just a mobile phjjone brings them into a world of continual partial attention to any particular subject or environment~\cite{Turkle2011} - the advent of mobile phones has previously been credited with allowing a person to \textit{``be in many places at once''} and to play multiple roles~\cite{Terashima2001}. The term PolySocial Reality (PoSR) has even been put forward to describe situations of multiplexing of physical reality with Web-based social networks and apps for Internet mediated social interaction~\cite{Applin2012}, and as it has been shown that \textit{``effective interaction among participants is a contributing factor to presence''}~\cite{Terashima2001} the importance of social interaction upon presence should not be understated.
 
-However, no matter how smooth the transitions, the process is expected to nonetheless result in some heightened cognitive load, a temporary \textit{break in presence}\breakinpresencefootnote{} (BIP), as the user comes to terms with the new environment presented to them and comprehends its relation to the other environment that they were just perceiving. Transitions can be implemented in multiple different manners and it is expected that users will prefer different implementations in different situations, surroundings and scenarios (where `preference' toward a particular implementation is expected to correlate with a less severe BIP being experienced upon its execution). To this end, this thesis explores several different transition implementations in order to identify and quantify preferences toward them, to infer which approaches to transitioning between RW and VR visual stimuli are more or less appropriate for the different situations that arise where a platform like those developed by this thesis may be deployed (moving, stationary, etc.).
+%HyperReality p148
+
+However, no matter how smooth the transitions, the process is expected to nonetheless result in some heightened cognitive load, a temporary break in presence (BIP), as the user comes to terms with the new environment presented to them and comprehends its relation to the other environment that they were just perceiving. The definition of break in presence adopted herein is the second from Waterworth and Waterworth~\cite{Waterworth2001} (p205): a movement along the focus axis away from presence in the real or a virtual environment and toward absence, which also relates to a reduction in involvement. This differs to Slater and Steed's original definition in~\cite{Slater2000} where they considered presence only in terms of attending to stimuli from a virtual environment, with a break in presence as a Gestalt switch to instead attending to stimuli from the real environment. Waterworth and Waterworth's model considers presence in terms of attending to stimuli from either the real \textit{or a virtual} environment, with a break in presence representing absence in the sense of heightened conceptual load and the resultant reduced perceptual processing of environmental stimuli originating from \textit{either} the real or a virtual environment. This definition better fits the situation invoked by the parallel reality concept, which is concerned with intentionally and willingly switching engagement between stimuli from both real and virtual environments, rather than engaging with stimuli from only a virtual environment in a scenario where stimuli from the real environment are considered a `distraction'.
+
+Transitions can be implemented in multiple different manners and it is expected that users will prefer different implementations in different situations, surroundings and scenarios (where `preference' toward a particular implementation is expected to correlate with a less severe BIP being experienced upon its execution). To this end, this thesis explores several different transition implementations in order to identify and quantify preferences toward them, to infer which approaches to transitioning between RW and VR visual stimuli are more or less appropriate for the different situations that arise where a platform like those developed by this thesis may be deployed (moving, stationary, etc.).
 
 %=========================================================================================================
 
